crates/backyard-parser/tests/snapshots/label__basic.snap
---
source: crates/backyard-parser/tests/label.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: label
    label:
      node_type: identifier
      name: label
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 5
          offset: 5
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 5
    offset: 5
leadings: ~
trailings: ~
