crates/backyard-parser/tests/snapshots/label__get.snap
---
source: crates/backyard-parser/tests/label.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: label
    label:
      node_type: identifier
      name:
        - 103
        - 101
        - 116
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 3
          offset: 3
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 3
        offset: 3
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 3
    offset: 3
leadings: ~
trailings: ~
